--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,15 @@
     background-size: 10% 0%;
 
   }
+
+  /*jumbotron Css*/
+  .jumbotrn{
+    padding: 20px;
+    background-color: var(--primary);
+  }
+
+
+  .jumbotrn img{
+    width: 400px;
+    margin-top: 100px;
+  }
